--- a/Bookstore/Areas/Customer/Views/ShoppingBasket/Index.cshtml
+++ b/Bookstore/Areas/Customer/Views/ShoppingBasket/Index.cshtml
@@ -15,6 +15,9 @@
                             <i class="bi bi-bag-fill"></i> Оформить заказ
                         </button>
                     </form>
+                    <div id="boxSelect">
+                        
+                    </div>
                 </div>
             </div>
         </div>
@@ -23,6 +26,7 @@
 
 
 @section Scripts{
+    <script src="~/js/Customer/WishList.js"></script>
     <script src="~/js/Customer/ShoppingBasket.js"></script>
 }
 
