--- a/Bookstore/Views/Shared/_Layout.cshtml
+++ b/Bookstore/Views/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="nav-link text-light" asp-area="Customer" asp-controller="ShoppingBasket" asp-action="Index" asp-route-bookId="null">
+                                    <a class="nav-link text-light" asp-area="Customer" asp-controller="ShoppingBasket" asp-action="Index">
                                         <i class="bi bi-bag-check-fill"></i>Корзина
                                     </a>
                                 </li>
