--- a/Bookstore/Areas/Customer/Views/ShoppingBasket/Index.cshtml
+++ b/Bookstore/Areas/Customer/Views/ShoppingBasket/Index.cshtml
@@ -9,21 +9,22 @@
             <div class="col-2">
                 <div class="col-12">
                     <div id="orderingInformation">
-                    </div>          
+                    </div>
                     <div id="checkout">
                     </div>
-                    <div id="boxSelect">                        
+                    <div id="isSave"><button onclick="confirmChangeCount(event)" type="submit" class="mt-2 btn btn-success bi bi-floppy">Сохранить изменения</button></div>
+                    <div id="boxSelect">
                     </div>
                 </div>
-                
+
             </div>
         </div>
     </div>
 </div>
 <style>
     input[type='number'] {
-        -moz-appearance: textfield; /* Firefox */
-        appearance: textfield; /* Chrome, Safari, Opera */
+        -moz-appearance: textfield;     
+        appearance: textfield; 
     }
 </style>
 
