--- a/Bookstore/Areas/Admin/Views/Book/Delete.cshtml
+++ b/Bookstore/Areas/Admin/Views/Book/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Book
+﻿@model Product
 
 <form method="post">
 <div class="container align-content-center justify-content-center align-items-center m-4 mt-5">
