--- a/Bookstore/Areas/Admin/Views/Book/Upsert.cshtml
+++ b/Bookstore/Areas/Admin/Views/Book/Upsert.cshtml
@@ -1,8 +1,8 @@
-﻿@model BookVM
+﻿@model ProductVM
 
 <div class="container">
     <div class="text-center">
-        @if (Model.Book.BookId != 0)
+        @if (Model.Product.ProductId != 0)
         {
             <h2>Обновить данные книги</h2>
         }
@@ -18,58 +18,58 @@
         <form method="post" class="row" enctype="multipart/form-data">
             <div class="row">
                 <div class="col-3">
-                    <input asp-for="Book.BookId" hidden />
+                    <input asp-for="Product.ProductId" hidden />
                     <div class="form-floating mb-2 pb-2 mt-2">
-                        <input asp-for="Book.Title" class="form-control border-0 shadow" />
-                        <label asp-for="Book.Title" class="ms-1 my-1 text-dark">Название</label>
-                        <span asp-validation-for="Book.Title" class="text-danger"></span>
+                        <input asp-for="Product.Title" class="form-control border-0 shadow" />
+                        <label asp-for="Product.Title" class="ms-1 my-1 text-dark">Название</label>
+                        <span asp-validation-for="Product.Title" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-2 pb-2">
-                        <input asp-for="Book.Author" class="form-control border-0 shadow" />
-                        <label asp-for="Book.Author" class="ms-1 my-1 text-dark">Автор</label>
-                        <span asp-validation-for="Book.Author" class="text-danger"></span>
+                        <input asp-for="Product.Author" class="form-control border-0 shadow" />
+                        <label asp-for="Product.Author" class="ms-1 my-1 text-dark">Автор</label>
+                        <span asp-validation-for="Product.Author" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-2 pb-2">
-                        <input asp-for="Book.ISBN" class="form-control border-0 shadow" />
-                        <label asp-for="Book.ISBN" class="ms-1 my-1 text-dark"></label>
-                        <span asp-validation-for="Book.ISBN" class="text-danger"></span>
+                        <input asp-for="Product.ISBN" class="form-control border-0 shadow" />
+                        <label asp-for="Product.ISBN" class="ms-1 my-1 text-dark"></label>
+                        <span asp-validation-for="Product.ISBN" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-2 pb-2">
-                        <input asp-for="Book.Price" class="form-control border-0 shadow" />
-                        <label asp-for="Book.Price" class="ms-1 my-1 text-dark">Цена</label>
-                        <span asp-validation-for="Book.Price" class="text-danger"></span>
+                        <input asp-for="Product.Price" class="form-control border-0 shadow" />
+                        <label asp-for="Product.Price" class="ms-1 my-1 text-dark">Цена</label>
+                        <span asp-validation-for="Product.Price" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-2 pb-2">
-                        <input asp-for="Book.ImageURL" class="form-control border-0 shadow" />
-                        <label asp-for="Book.ImageURL" class="ms-1 my-1 text-dark">Ссылка на картинку</label>
-                        <span asp-validation-for="Book.ImageURL" class="text-danger"></span>
+                        <input asp-for="Product.ImageURL" class="form-control border-0 shadow" />
+                        <label asp-for="Product.ImageURL" class="ms-1 my-1 text-dark">Ссылка на картинку</label>
+                        <span asp-validation-for="Product.ImageURL" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-2 pb-2">
-                        <select asp-for="Book.Category" class="form-control border-0 shadow">
+                        <select asp-for="Product.Category" class="form-control border-0 shadow">
                             <option value="">Выберите категорию</option>
                             @foreach (var category in Model.CategoriesList ?? Enumerable.Empty<Category>())
                             {
                                 <option value="@category.Id">@category.Name</option>
                             }
                         </select>
-                        <label asp-for="Book.Category" class="ms-1 my-1 text-dark text-muted">Жанр</label>
-                        <span asp-validation-for="Book.Category" class="text-danger"></span>
+                        <label asp-for="Product.Category" class="ms-1 my-1 text-dark text-muted">Жанр</label>
+                        <span asp-validation-for="Product.Category" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col-7 flex-lg-column d-flex h-auto">
                     <div class="form-floating py-2">
-                        <label asp-for="Book.Description" class="ms-2 text-muted">Описание</label>
-                        <textarea asp-for="Book.Description" class="form-control border-0 shadow"></textarea>
+                        <label asp-for="Product.Description" class="ms-2 text-muted">Описание</label>
+                        <textarea asp-for="Product.Description" class="form-control border-0 shadow"></textarea>
                     </div>
                 </div>
 
                 <div class="col-2">
-                    @if (Model.Book.BookId != 0)
+                    @if (Model.Product.ProductId != 0)
                     {
                         <div class="container mt-4 ">
                             <div class="row justify-content-center align-items-center">
                                 <div class="text-center">
-                                    <a class="btn btn-danger mb-3" asp-action="Delete" asp-controller="Book" asp-route-id="@Model.Book.BookId">Удалить</a>
+                                    <a class="btn btn-danger mb-3" asp-action="Delete" asp-controller="Book" asp-route-id="@Model.Product.ProductId">Удалить</a>
                                 </div>
                                 <div class="text-center">
                                     <button type="submit" class="btn btn-success form-control">Обновить</button>
