--- a/Bookstore/Areas/Admin/Views/Category/BookCategory.cshtml
+++ b/Bookstore/Areas/Admin/Views/Category/BookCategory.cshtml
@@ -36,7 +36,7 @@
                                     </div>
                                 </div>
                                 <div class="card-footer bg-transparent">
-                                    <a asp-controller="Book" asp-action="Upsert" asp-route-bookId="@book.BookId" class="btn btn-success border-0 form-control">
+                                    <a asp-controller="Book" asp-action="Upsert" asp-route-bookId="@book.ProductId" class="btn btn-success border-0 form-control">
                                         Details
                                     </a>
                                 </div>
