--- a/Bookstore/Views/Shared/_Layout.cshtml
+++ b/Bookstore/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div>
-                    <form class="d-flex" method="post" asp-area="Customer" asp-controller="Home" asp-action="Search">
+                    <form class="d-flex" method="get" asp-area="Customer" asp-controller="Home" asp-action="Search">
                         <input class="form-control me-sm-1 bg-light" type="search" name="searchString" placeholder="Поиск">
                         <button class="btn btn-dark my-4 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
                     </form>
