--- a/Bookstore/Areas/Customer/Views/Orders/Index.cshtml
+++ b/Bookstore/Areas/Customer/Views/Orders/Index.cshtml
@@ -7,8 +7,8 @@
 
 <h1>Заказы</h1>
 <div class="container">
-    <div class="row ">
-        @foreach (Order order in Model.OrderData)
+    <div class="row">
+        @foreach (Order order in Model.Orders)
         {
             <div class="form-group border border-1 rounded rounded-1 p-4">
                 <div class="d-inline-flex align-items-center">
