--- a/Bookstore/Areas/Customer/Views/Orders/Index.cshtml
+++ b/Bookstore/Areas/Customer/Views/Orders/Index.cshtml
@@ -90,7 +90,7 @@
                     <div class="form-group">
                         Данные получателя:
                         @order.ReceiverName
-                        @order.RecipientsLastName
+                        @order.ReceiverLastName
                         @order.PhoneNumber
                     </div>
                 </div>
