--- a/Bookstore/Areas/Purchase/Views/Purchase/Payment.cshtml
+++ b/Bookstore/Areas/Purchase/Views/Purchase/Payment.cshtml
@@ -9,7 +9,7 @@
             <input asp-for="UserId" hidden />
             <input asp-for="PurchaseAmount" hidden />
             <input asp-for="ReceiverName" hidden />
-            <input asp-for="RecipientsLastName" hidden />
+            <input asp-for="ReceiverLastName" hidden />
             <input asp-for="PhoneNumber" hidden />
             <input asp-for="isCourierDelivery" hidden />
             <input asp-for="City" hidden />
