--- a/Bookstore/Areas/WorkerOrderPickupPoint/Views/OrderWorker/Order.cshtml
+++ b/Bookstore/Areas/WorkerOrderPickupPoint/Views/OrderWorker/Order.cshtml
@@ -144,7 +144,7 @@
                 <div class="form-group">
                     Данные получателя:
                     @Model.Order.ReceiverName
-                    @Model.Order.RecipientsLastName
+                    @Model.Order.ReceiverLastName
                     @Model.Order.PhoneNumber
                 </div>
             </div>
