--- a/Bookstore/Views/Shared/_Layout.cshtml
+++ b/Bookstore/Views/Shared/_Layout.cshtml
@@ -117,7 +117,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="nav-link text-light" asp-area="Customer" asp-controller="Orders" asp-action="Index" asp-route-bookId="null">
+                                    <a class="nav-link text-light" asp-area="Customer" asp-controller="Orders" asp-action="Index">
                                         <i class="bi bi-box-seam"></i>Заказы
                                     </a>
                                 </li>
