--- a/Bookstore/Areas/Purchase/Views/Purchase/FillDeliveryDate.cshtml
+++ b/Bookstore/Areas/Purchase/Views/Purchase/FillDeliveryDate.cshtml
@@ -14,7 +14,7 @@
                 <input asp-for="UserId" hidden />
                 <input asp-for="PurchaseAmount" hidden />
                 <input asp-for="ReceiverName" hidden />
-                <input asp-for="RecipientsLastName" hidden />
+                <input asp-for="ReceiverLastName" hidden />
                 <input asp-for="PhoneNumber" hidden />
                 <input asp-for="isCourierDelivery" hidden />
                 <hr />
