--- a/Bookstore/Areas/WorkerOrderPickupPoint/Views/OrderWorker/IssuePackage.cshtml
+++ b/Bookstore/Areas/WorkerOrderPickupPoint/Views/OrderWorker/IssuePackage.cshtml
@@ -93,14 +93,14 @@
                 <div class="form-group">
                     Данные получателя:
                     @Model.Order.ReceiverName
-                    @Model.Order.RecipientsLastName
+                    @Model.Order.ReceiverLastName
                     @Model.Order.PhoneNumber
                 </div>
             </div>
             <form method="post" enctype="multipart/form-data">
-                <input asp-for="@Model.Order.ConfirmationСode" class="form-control border-0 shadow" />
+                <input asp-for="@Model.Order.ConfirmationCode" class="form-control border-0 shadow" />
                 <label class="ms-1 my-1 text-dark">Введите код для получения</label>
-                <span asp-validation-for="@Model.Order.ConfirmationСode" class="text-danger"></span>
+                <span asp-validation-for="@Model.Order.ConfirmationCode" class="text-danger"></span>
             </form>
         </div>
         <hr class="mt-5 mb-5" />
