--- a/Bookstore/Areas/Customer/Views/Orders/Index.cshtml
+++ b/Bookstore/Areas/Customer/Views/Orders/Index.cshtml
@@ -75,7 +75,7 @@
                 </div>
                 <div>
                     Доставка:
-                    @if (order.isCourierDelivery == true)
+                    @if (order.IsCourierDelivery == true)
                     {
                         <label> Курьером</label>
                         <div class="form-group">
