--- a/Bookstore/Areas/WorkerOrderPickupPoint/Views/OrderWorker/IssuePackage.cshtml
+++ b/Bookstore/Areas/WorkerOrderPickupPoint/Views/OrderWorker/IssuePackage.cshtml
@@ -78,7 +78,7 @@
             </div>
             <div>
                 Доставка:
-                @if (@Model.Order.isCourierDelivery == true)
+                @if (@Model.Order.IsCourierDelivery == true)
                 {
                     <label> Курьером</label>
                     <div class="form-group">
