--- a/Bookstore/Areas/WorkerOrderPickupPoint/Views/OrderWorker/Order.cshtml
+++ b/Bookstore/Areas/WorkerOrderPickupPoint/Views/OrderWorker/Order.cshtml
@@ -129,7 +129,7 @@
             </div>
             <div>
                 Доставка:
-                @if (@Model.Order.isCourierDelivery == true)
+                @if (@Model.Order.IsCourierDelivery == true)
                 {
                     <label> Курьером</label>
                     <div class="form-group">
