--- a/Bookstore/Areas/Admin/Views/Book/Upsert.cshtml
+++ b/Bookstore/Areas/Admin/Views/Book/Upsert.cshtml
@@ -20,9 +20,9 @@
                 <div class="col-3">
                     <input asp-for="Product.ProductId" hidden />
                     <div class="form-floating mb-2 pb-2 mt-2">
-                        <input asp-for="Product.Title" class="form-control border-0 shadow" />
-                        <label asp-for="Product.Title" class="ms-1 my-1 text-dark">Название</label>
-                        <span asp-validation-for="Product.Title" class="text-danger"></span>
+                        <input asp-for="Product.Name" class="form-control border-0 shadow" />
+                        <label asp-for="Product.Name" class="ms-1 my-1 text-dark">Название</label>
+                        <span asp-validation-for="Product.Name" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-2 pb-2">
                         <input asp-for="Product.Author" class="form-control border-0 shadow" />
