--- a/Bookstore/Areas/Customer/Views/Home/Index.cshtml
+++ b/Bookstore/Areas/Customer/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
                                 <div class="card-body border-light ">
                                     <div class="card-body mt-auto mt-2">
                                         <div class="">
-                                            <p class="card-title text-black"><b>@product.Title</b></p>
+                                            <p class="card-title text-black"><b>@product.Name</b></p>
                                         </div>
                                         <div class="">
                                             <p class="card-title text-dark opacity-75"><b>@product.Author</b></p>
