--- a/Bookstore/Areas/Customer/Views/Home/Search.cshtml
+++ b/Bookstore/Areas/Customer/Views/Home/Search.cshtml
@@ -12,7 +12,7 @@
                             <div class="card-body border-light ">
                                 <div class="card-body mt-auto mt-2">
                                     <div class="">
-                                        <p class="card-title text-black"><b>@book.Title</b></p>
+                                        <p class="card-title text-black"><b>@book.Name</b></p>
                                     </div>
                                     <div class="">
                                         <p class="card-title text-dark opacity-75"><b>@book.Author</b></p>
