--- a/Bookstore/Areas/Customer/Views/Home/Details.cshtml
+++ b/Bookstore/Areas/Customer/Views/Home/Details.cshtml
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div>
-        <h1>@Model.Author : @Model.Title</h1>
+        <h1>@Model.Author : @Model.Name</h1>
     </div>
     <div class="row">
         <div class="col-3">
