--- a/Bookstore/Areas/Customer/Views/Orders/Index.cshtml
+++ b/Bookstore/Areas/Customer/Views/Orders/Index.cshtml
@@ -1,113 +1,14 @@
 ﻿
-
 <h1>Заказы</h1>
-<div class="container">
-    <div class="row">
-        @foreach (Order order in Model.Orders)
-        {
-            <div class="form-group border border-1 rounded rounded-1 p-4">
-                <div class="d-inline-flex align-items-center">
-                    <span class="mr-3">Номер заказа: </span>
-                    <div class="rouden rounded-1 text-bg-primary m-1">
-                        @order.OrderId
-                    </div>
-                </div>
-
-                <div class="d-inline-flex align-items-center">
-                    <span class="mr-3">Статус заказа: </span>
-                    <div class="rouden rounded-1 text-bg-primary m-1">@order.OrderStatus</div>
-                </div>
-
-                <div class="">
-                    <label>Дата и время заказа: @order.PurchaseDate по МСК</label>
-                </div>
-
-                @{
-                    IEnumerable<OrderProductData>
-                    productsData = JsonConvert.DeserializeObject<IEnumerable<OrderProductData>>(order.ProductData);
-                }
-                @{
-                    int countProduct = 0;
-                    int sumPrice = 0;
-                }
-
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th scope="col">Id</th>
-                            <th scope="col">Название</th>
-                            <th scope="col">Цена</th>
-                            <th scope="col">Количество</th>
-                        </tr>
-                    </thead>
-                    @foreach (OrderProductData product in productsData)
-                    {
-                        <tbody class="table-group-divider">
-                            <tr>
-                                <td>@product.Id</td>
-                                <td>
-                                    Название
-                                </td>
-                                <td>@product.Price</td>
-                                <td>@product.Count</td>
-                                @{
-                                    countProduct += product.Count;
-                                    sumPrice += product.Count * product.Price;
-                                }
-                            </tr>
-                        </tbody>
-                    }
-                </table>
-                <div>
-                    <label>Количество товаров: @countProduct</label>
-                    <label class="m-3">Стоимость: @sumPrice</label>
-                </div>
-                <div class="form-group">
-                    <label>Оплачено:</label>
-                    <label>@order.PurchaseAmount</label>
-                </div>
-                <div>
-                    Доставка:
-                    @if (order.IsCourierDelivery == true)
-                    {
-                        <label> Курьером</label>
-                        <div class="form-group">
-                            Адрес доставки:
-                            @order.City, @order.Street @order.HouseNumber
-                        </div>
-                    }
-                    else
-                    {
-                        <label> В пункт выдачи</label>
-                    }
-                    <div class="form-group">
-                        Данные получателя:
-                        @order.ReceiverName
-                        @order.ReceiverLastName
-                        @order.PhoneNumber
-                    </div>
-                </div>
-            </div>
-            <hr class="mt-5 mb-5" />
-        }
+<div class="container mb-5">
+    <div class="row" id="orders">
     </div>
 </div>
 
 
+@section Scripts{
+    <script src="/js/Customer/Order.js"></script>
+}
 
 
-@*<div class="form-group">
-    <input asp-for="@order.CurrentPosition" class="form-control" />
-    </div>
-    <div class="form-group">
-    <input asp-for="@order.DeliveryAddress" class="form-control" />
-    </div>
-    <div class="form-group">
-    <input asp-for="@order.TravelHistory" class="form-control" />
-    </div>
-    <div class="form-group">
-    <input asp-for="@order.Region" class="form-control" />
-    </div>
-    <div class="form-group">
-    <input asp-for="@order.City" class="form-control" />
-    </div>*@
+
