--- a/Minotaur/Areas/Customer/Views/Home/Index.cshtml
+++ b/Minotaur/Areas/Customer/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 
 <div class="">
     <div class="row pb-5 mb-5 mb-2">
-        @if (Model.ProductsList != null)
+      @*  @if (Model.ProductsList != null)
             @foreach (var product in Model.ProductsList)
             {
                 <div class="col-lg-2 col-sm-1">
@@ -117,7 +117,7 @@
                         </div>
                     </div>
                 </div>
-            }
+            }*@
     </div>
 </div>
 
