--- a/Minotaur/Areas/Identity1/Views/User/Profile.cshtml
+++ b/Minotaur/Areas/Identity1/Views/User/Profile.cshtml
@@ -2,7 +2,7 @@
 
 <div class="container-fluid mt-5">
     <form method="post">
-        <input asp-for="UserId" hidden />
+        <input asp-for="Id" hidden />
         <div class="row">
             <div class="col-md-6">
                 <div class="card bg-dark text-white">
