--- a/Minotaur/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Minotaur/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<MinotaurUser> SignInManager
+﻿@using Minotaur.Models;
+@inject SignInManager<User> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
