--- a/Minotaur/Views/Shared/_Layout.cshtml
+++ b/Minotaur/Views/Shared/_Layout.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -30,18 +28,7 @@
                     </form>
                 </div>
                 <div class="navbar-collapse collapse d-sm-inline-flex">
-
-                  
-                        <ul class="navbar-nav flex-grow-1 justify-content-end">
-                            <li>
-                                <a class="nav-link text-light" asp-area="Identity" asp-controller="Account" asp-action="Logout">Регистрация</a>
-                            </li>
-                            <li>
-                                <a class="nav-link text-light" asp-area="Identity" asp-controller="Account" asp-action="Login">Войти</a>
-                            </li>
-
-                        </ul>
-                    
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
