--- a/Minotaur/Views/_ViewImports.cshtml
+++ b/Minotaur/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using Minotaur.Models.SD
 @using Minotaur.DataAccess
 @using Minotaur.Areas.Customer
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
