--- a/Minotaur/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Minotaur/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,5 +1,4 @@
-﻿@using Minotaur.Models;
-@inject SignInManager<User> SignInManager
+﻿@inject SignInManager<IdentityUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
