--- a/Minotaur/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Minotaur/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,22 +5,22 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>Вход</h1>
+<h1>@ViewData["Title"]</h1>
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-4">
         <section>
-            <form id="account" method="post" enctype="multipart/form-data">
-                <h2>Введите данные для входа</h2>
+            <form id="account" method="post">
+                <h2>Use a local account to log in.</h2>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
                 <div class="form-floating mb-3">
                     <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                    <label asp-for="Input.Email" class="form-label">Элетронная почта</label>
+                    <label asp-for="Input.Email" class="form-label">Email</label>
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
                 <div class="form-floating mb-3">
                     <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="password" />
-                    <label asp-for="Input.Password" class="form-label">Пароль</label>
+                    <label asp-for="Input.Password" class="form-label">Password</label>
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div class="checkbox mb-3">
@@ -30,38 +30,23 @@
                     </label>
                 </div>
                 <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Войти</button>
+                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
                 </div>
                 <div>
                     <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Забыли пароль?</a>
+                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
                     </p>
                     <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Зарегестрироваться</a>
+                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
                     </p>
-
+                    <p>
+                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
+                    </p>
                 </div>
             </form>
         </section>
     </div>
-
-</div>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
-
-
-
-@*<p>
-   <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-</p>*@
-
-
-
-
-
-@*<div class="col-md-6 col-md-offset-2">
+    <div class="col-md-6 col-md-offset-2">
         <section>
             <h3>Use another service to log in.</h3>
             <hr />
@@ -70,7 +55,8 @@
                 {
                     <div>
                         <p>
-                            Автороизация через сервисы <a href="https://go.microsoft.com/fwlink/?LinkID=532715"></a>.
+                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
+                            about setting up this ASP.NET application to support logging in via external services</a>.
                         </p>
                     </div>
                 }
@@ -89,4 +75,9 @@
                 }
             }
         </section>
-    </div>*@
+    </div>
+</div>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
