--- a/Minotaur/Views/Shared/_LoginPartial.cshtml
+++ b/Minotaur/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 
-@inject SignInManager<User> SignInManager
-@inject UserManager<User> UserManager
+@inject SignInManager<MinotaurUser> SignInManager
+@inject UserManager<MinotaurUser> UserManager
 
 
 <ul class="navbar-nav">
